calico-enterprise_versioned_docs/version-3.14/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
---
title: Upgrade from Calico to Calico Enterprise
description: Steps to upgrade from open source Calico to Calico Enterprise.
ignore_installation_cr: true
cr_directory: manifests_cr
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

export const Paragraph = () => {
  const cmv = '{{releases.0.calico.minor_version}}';
  const ap = '{{releases.0.calico.archive_path}}';
  const cmv_postfix = cmv + '.x';
  const cmv_path = ap && ap !== '' ? `${ap}/${cmv}` : cmv;
  return (
    <p>
      Ensure that your Kubernetes cluster is running with open source Calico on the latest {cmv_postfix} release. If
      not, follow the{' '}
      <a href={`https://docs.projectcalico.org/${cmv_path}/maintenance/kubernetes-upgrade`}>
        Calico upgrade documentation
      </a>{' '}
      before continuing.
    </p>
  );
};

## Prerequisites

<Paragraph />

{{prodname}} only supports clusters with a Kubernetes datastore.
Please contact Tigera Support for assistance upgrading a cluster with an `etcdv3` datastore.

If your cluster already has {{prodname}} installed, follow the [Upgrading {{prodname}} from an earlier release guide](../../upgrading-enterprise/kubernetes-upgrade-tsee/index.mdx) instead.

For hybrid Linux and Windows clusters, ensure that your Windows nodes have at least 4 cores, 8GB RAM.

## Upgrade Calico to {{prodname}}

:::note

GKE upgrades from open source Calico are not currently supported.

:::

### Before you begin

**Required**

- [Configure a storage class for {{prodname}}.](../../../../operations/logstorage/create-storage.mdx)

### Install {{prodname}}

<Tabs>
<TabItem label="Kubernetes" value="Kubernetes-0">

<UpgradeOperatorSimple upgradeFrom='OpenSource' />

</TabItem>
<TabItem label="EKS" value="EKS-1">

<UpgradeOperatorSimple
  upgradeFrom='OpenSource'
  provider='EKS'
/>

</TabItem>
<TabItem label="AKS" value="AKS-2">

:::note

For AKS clusters with a self-managed Calico installation, including AKS clusters with Calico CNI, follow the upgrade steps under the **Kubernetes** tab.

:::

These upgrade instructions will upgrade your AKS clusters with Azure CNI and an AKS-managed Calico installation.

<UpgradeOperatorSimple
  upgradeFrom='OpenSource'
  provider='AKS'
/>

</TabItem>
</Tabs>

Wait until the `apiserver` shows a status of `Available`, then proceed to the next section.

:::note

If there are any problems you can use `kubectl get tigerastatus -o yaml` to get more details.

:::

### Install the {{prodname}} license

In order to use {{prodname}}, you must install the license provided to you by Tigera.

```
kubectl create -f </path/to/license.yaml>
```

You can now monitor progress with the following command:

```
watch kubectl get tigerastatus
```

When all components show a status of `Available`, proceed to the next section.

### Secure {{prodname}} with network policy

To secure {{prodname}} component communications, install the following set of network policies.

```bash-plain-text
kubectl apply -f {{filesUrl}}/manifests/tigera-policies.yaml
```

### Next steps

- [Configure access to {{prodname}} Manager UI](../../../../operations/cnx/access-the-manager.mdx)
- [Authentication quickstart](../../../../operations/cnx/authentication-quickstart.mdx)
