calico-enterprise_versioned_docs/version-3.15/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
---
description: Steps to upgrade from open source Calico to Calico Enterprise.
---

import variables from '@site/calico-enterprise_versioned_docs/version-3.15/variables';

# Upgrade from Calico to Calico Enterprise

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

export const Paragraph = () => {
  const cmv = '{variables.releases.0.calico.minor_version}';
  const ap = '{{releases.0.calico.archive_path}}';
  const cmv_postfix = cmv + '.x';
  const cmv_path = ap && ap !== '' ? `${ap}/${cmv}` : cmv;
  return (
    <p>
      Ensure that your Kubernetes cluster is running with open source Calico on the latest {cmv_postfix} release using
      an operator-based installation. If not, follow the{' '}
      <a href={`https://docs.projectcalico.org/${cmv_path}/maintenance/kubernetes-upgrade`}>
        Calico upgrade documentation
      </a>{' '}
      before continuing.
    </p>
  );
};

## Prerequisites

<Paragraph />

{variables.prodname} only supports clusters with a Kubernetes datastore.
Please contact Tigera Support for assistance upgrading a cluster with an `etcdv3` datastore.

If your cluster already has {variables.prodname} installed, follow the [Upgrading {variables.prodname} from an earlier release guide](../../upgrading-enterprise/kubernetes-upgrade-tsee/index.mdx) instead.

For hybrid Linux and Windows clusters, ensure that your Windows nodes have at least 4 cores, 8GB RAM.

## Upgrade Calico to {variables.prodname}

:::note

GKE upgrades from open source Calico are not currently supported.

:::

### Before you begin

**Required**

- [Configure a storage class for {variables.prodname}.](../../../../operations/logstorage/create-storage.mdx)

### Install {variables.prodname}

<Tabs>
<TabItem label="Kubernetes" value="Kubernetes-0">

<UpgradeOperatorSimple upgradeFrom='OpenSource' />

</TabItem>
<TabItem label="EKS" value="EKS-1">

<UpgradeOperatorSimple
  upgradeFrom='OpenSource'
  provider='EKS'
/>

</TabItem>
<TabItem label="AKS" value="AKS-2">

:::note

The following instructions are only for AKS clusters that use a Kubernetes reconciler. For AKS clusters with a self-managed Calico installation (including AKS clusters with Calico CNI), or a cluster that is not using a reconciler, follow the upgrade steps under the **Kubernetes** tab.

:::

These upgrade instructions will upgrade your AKS clusters with Azure CNI and an AKS-managed Calico installation.

<UpgradeOperatorSimple
  upgradeFrom='OpenSource'
  provider='AKS'
/>

</TabItem>
</Tabs>

Wait until the `apiserver` shows a status of `Available`, then proceed to the next section.

:::note

If there are any problems you can use `kubectl get tigerastatus -o yaml` to get more details.

:::

### Install the {variables.prodname} license

In order to use {variables.prodname}, you must install the license provided to you by Tigera.

```
kubectl create -f </path/to/license.yaml>
```

You can now monitor progress with the following command:

```
watch kubectl get tigerastatus
```

### Next steps

- [Configure access to {variables.prodname} Manager UI](../../../../operations/cnx/access-the-manager.mdx)
- [Authentication quickstart](../../../../operations/cnx/authentication-quickstart.mdx)
